--- a/project/res/values-de/strings.xml
+++ b/project/res/values-de/strings.xml
@@ -28,6 +28,8 @@
     <string name="end_date_optional">Enddatum: (optional)</string>
     <!-- End date display, when there is an end date selected.  %s is the date, e.g. "End Date: September 15" -->
     <string name="end_date_TEMPLATE">Enddatum: %s</string>
+    <!-- Fly From Template where %s is the origin e.g. "Fly from Boston,MA" -->
+    <string name="fly_from_TEMPLATE">Flug ab %1$s</string>
 
     <!-- Calendar picker strings -->
     <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
@@ -92,7 +94,7 @@
     </plurals>
     <!-- Destination and date range e.g. "Maui, Aug 5 - Aug 12 -->
     <string name="destination_and_date_range_TEMPLATE">%1$s, %2$s</string>
-    <!-- Trip To -->
+    <!-- Trip bucket title intro, "Trip To" (e.g., "Trip To New York, USA") -->
     <string name="trip_to">Reise nach</string>
     <!-- Trip bucket, trip is empty message -->
     <string name="trip_empty">Ihr Reiseplan ist leer.</string>
@@ -106,6 +108,11 @@
     <string name="actionbar_tablet_results_hotels_title_TEMPLATE">Hotels in %1$s</string>
     <!-- Label for VIP badge -->
     <string name="VIP">VIP</string>
+    <!-- Loading Hotels and Flights… -->
+    <string name="loading_hotels_and_flights">Hotels und Flüge werden geladen…</string>
+    <!-- Flight fare calendar header for a list of dates to fly -->
+    <string name="when_to_fly">Datum des Hinfluges</string>
+
 
     <!-- Tablet hotel filters -->
     <!-- "Sort By" section header -->
@@ -140,6 +147,16 @@
     <string name="stops">Zwischenstopps</string>
     <!-- Header for a flight filter, showing a list of flights from different airlines -->
     <string name="airlines">Fluglinien</string>
+
+    <!-- Pluralization for number of stops (layovers) on a given flight "2 stops" -->
+    <plurals name="x_Stops_TEMPLATE">
+        <item quantity="zero">Keine Stopps</item>
+        <item quantity="one">%s Zwischenstopp</item>
+        <item quantity="two">%s Zwischenstopps</item>
+        <item quantity="few">%s Zwischenstopps</item>
+        <item quantity="many">%s Zwischenstopps</item>
+        <item quantity="other">%s Zwischenstopps</item>
+    </plurals>
 
     <!-- Header for a dropdown to select from a list of available departure airports -->
     <string name="departure_airports">Abflugflughäfen</string>
@@ -182,6 +199,22 @@
     <!-- Tablet flight trip bucket -->
     <!-- Label describing this flight is a round trip flight. -->
     <string name="round_trip">Hin- und Rückflug</string>
+    <!-- Label describing the total price of the flight or hotel that is going to be booked -->
+    <string name="total_with_tax">Gesamtpreis inkl. Steuern</string>
+
+    <!-- Tablet hotel trip bucket -->
+    <!-- Progress dialog text while creating a trip -->
+    <string name="spinner_text_hotel_create_trip">Reise wird erstellt…</string>
+
+    <!-- Tablet Checkout -->
+    <!-- Actionbar Title - "Checkout" -->
+    <string name="Checkout">Buchen</string>
+    <!-- Your Trip -->
+    <string name="your_trip">Ihre Reise</string>
+    <!-- now booking template (e.g. "Now Booking Hotel Lancaster") -->
+    <string name="now_booking_TEMPLATE">&lt;b&gt;%1$s&lt;/b&gt; wird gebucht</string>
+    <!-- Template for a string that describes a hotel stay, example: "August 8 - 10 (2 nights)" -->
+    <string name="dates_and_nights_TEMPLATE">%1$s (%2$s)</string>
 
     <!-- Facebook -->
     <!-- Weve found your user account -->
@@ -280,6 +313,8 @@
     <string name="find_itinerary_pound">Reiseplannr. suchen:</string>
     <!-- Expedia Itinerary -->
     <string name="expedia_itinerary">Expedia-Reiseplannr.</string>
+    <!-- Travelocity Itinerary -->
+    <string name="tvly_itinerary">Travelocity-Reiseplannr.</string>
     <!-- Elite plus customer support -->
     <string name="elite_plus_customer_support">Elite-Plus-Kundenservice</string>
     <!-- No upcoming trips -->
@@ -734,6 +769,8 @@
     <string name="share_template_long_hotel_5_more_info">Weitere Infos\n%s</string>
     <!-- App download link -->
     <string name="share_template_long_ad">Sie möchten Hotels und Flüge buchen und Ihre Reisepläne einsehen und teilen? Dann laden Sie noch heute die kostenlose Expedia-App herunter.\n%s</string>
+    <!-- Travelocity App download link -->
+    <string name="share_template_long_ad_tvly">Sie möchten Hotels und Flüge buchen und Ihre Reisepläne einsehen und teilen? Dann laden Sie noch heute die kostenlose Travelocity-App herunter.\n%s</string>
     <!-- 1: city 2: date string -->
     <string name="share_template_subject_flight">Ich fliege am %2$s nach %1$s!</string>
     <!-- 1: travelerName 2: city 3: date string -->
@@ -751,6 +788,24 @@
     <!-- 1: vehicle type -->
     <string name="share_template_short_car_type">Ich habe einen %1$s gemietet</string>
     <string name="share_template_short_car_type_an">Ich habe einen %1$s gemietet</string>
+    <string name="share_template_short_car_type_mini">Ich habe einen Miniklasse-PKW gemietet</string>
+    <string name="share_template_short_car_type_compact">Ich habe einen Kompakt-PKW gemietet</string>
+    <string name="share_template_short_car_type_midsize">Ich habe einen mittelgroßen PKW gemietet</string>
+    <string name="share_template_short_car_type_standard">Ich habe einen Standard-PKW gemietet</string>
+    <string name="share_template_short_car_type_fullsize">Ich habe einen großen PKW gemietet</string>
+    <string name="share_template_short_car_type_premium">Ich habe einen Premium-PKW gemietet</string>
+    <string name="share_template_short_car_type_luxury">Ich habe einen Luxus-PKW gemietet</string>
+    <string name="share_template_short_car_type_special">Ich habe einen Spezial-PKW gemietet</string>
+    <string name="share_template_short_car_type_mini_elite">Ich habe einen Miniklasse-Elite-PKW gemietet</string>
+    <string name="share_template_short_car_type_compact_elite">Ich habe einen Kompakt-Elite-PKW gemietet</string>
+    <string name="share_template_short_car_type_midsize_elite">Ich habe einen mittelgroßen Elite-PKW gemietet</string>
+    <string name="share_template_short_car_type_standard_elite">Ich habe einen Standard-Elite-PKW gemietet</string>
+    <string name="share_template_short_car_type_fullsize_elite">Ich habe einen großen Elite-PKW gemietet</string>
+    <string name="share_template_short_car_type_premium_elite">Ich habe einen Premium-Elite-PKW gemietet</string>
+    <string name="share_template_short_car_type_luxury_elite">Ich habe einen Luxus-Elite-PKW gemietet</string>
+    <string name="share_template_short_car_type_economy">Ich habe einen Economy-PKW gemietet</string>
+    <string name="share_template_short_car_type_economy_elite">Ich habe einen Economy-Elite-PKW gemietet</string>
+    <string name="share_template_short_car_type_oversize">Ich habe einen übergroßen PKW gemietet</string>
     <!-- 1: pick up date 2: drop off date -->
     <string name="share_template_short_car_dates">von %1$s - %2$s</string>
     <!-- Start of share email.  %1$s is the car rental vendor name (e.g., "Advantage") -->
@@ -1071,6 +1126,8 @@
     <string name="Amount_to_be_paid_now_TEMPLATE">Jetzt fällig: %1$s</string>
     <!-- String for non-merchant hotel billing policy e.g.: $102.80 Collected by the hotel -->
     <string name="collected_by_the_hotel_TEMPLATE">Im Hotel zu zahlen: %1$s</string>
+    <!-- "Finish Booking" button that appears after CVV is entered -->
+    <string name="Finish_Booking">Buchung abschließen</string>
     <!-- Checkout menu item -->
     <string name="menu_checkout">Buchen</string>
     <!-- Our best price gaurentee string -->
@@ -1099,6 +1156,15 @@
     <string name="please_use_the_roman_alphabet">Bitte verwenden Sie nur lateinische Buchstaben.</string>
     <!-- Label to show user when they use unsupported characters in their email -->
     <string name="please_enter_a_valid_email_address">Bitte geben Sie eine gültige E-Mail-Adresse ein.</string>
+
+    <!-- Tablet Checkout Activity -->
+    <!-- Travelers -->
+    <string name="travelers">Reisende</string>
+    <!-- Payment -->
+    <string name="payment">Zahlung</string>
+    <!-- Enter Payment Information -->
+    <string name="enter_payment_information">Zahlungsinformationen eingeben</string>
+
 
     <!-- Hotel Traveler Info Options Activity -->
     <!-- Done menu item -->
@@ -1245,6 +1311,15 @@
     <string name="only_if_applicable">Regress-Nr. (falls zutreffend)</string>
     <!-- Saving traveler info spinner dialog -->
     <string name="saving_traveler">Die Daten werden in Ihrem Konto gespeichert…</string>
+    <!-- Traveler information Template. e.g. Traveler 2 Information -->
+    <string name="traveler_information_TEMPLATE">Angaben zum Reisenden %1$s</string>
+    <!-- Seating Preference -->
+    <string name="seating_preference">Bevorzugter Sitzplatz</string>
+    <!-- Special Assistance -->
+    <string name="special_assistance">Besondere Betreuung</string>
+    <!-- Add Redress # -->
+    <string name="add_redress_num">Redress-Nr. hinzufügen</string>
+
 
     <!-- Traveler Info spinner values -->
     <!-- None -->
@@ -1413,6 +1488,12 @@
     <!-- Button label imploring users to pick flights due to unavailability -->
     <string name="pick_new_flights">Neue Flüge aussuchen</string>
 
+    <!-- Hotel booking dialog errors -->
+    <!-- Error shown to user if their hotel is no longer available (sold out, session expired, whatever) -->
+    <string name="error_hotel_no_longer_available">Ihre Vorreservierung für dieses Zimmer ist leider abgelaufen.</string>
+    <!-- Button label imploring users to pick a new hotel room due to unavailability -->
+    <string name="pick_new_hotel">Neues Hotel aussuchen</string>
+
     <!-- Credit card input section -->
     <string name="one">1</string>
     <string name="two">2</string>
@@ -1428,11 +1509,20 @@
 
     <!-- Highlight view stuff -->
     <!-- Asks for a cvv code (credit card code) for a card.  %s is the card name, E.g., "CVV code for Dan's Credit Card" -->
-    <string name="cvv_code_TEMPLATE">Prüfnummer für &lt;b&gt;%s&lt;/b&gt;</string>
+    <string name="cvv_code_TEMPLATE">&lt;center&gt;Prüfnummer für &lt;b&gt;%s&lt;/b&gt;&lt;/center&gt;</string>
     <!-- Name for a generic card.  %s is the last four digits of the card, e.g. "card ending in 1234" -->
     <string name="card_ending_TEMPLATE">Karte endet auf %s</string>
     <!-- Title for screen telling you to complete your booking by entering a CVV # -->
     <string name="title_complete_booking">Buchung abschließen</string>
+    <!-- Security label above signature strip on credit card mockup, on CVV screen -->
+    <string name="Authorized_Signature">Autorisierte Unterschrift</string>
+    <!-- Security label below signature strip on credit card mockup, on CVV screen -->
+    <string name="Not_Valid_Unless_Signed">Ohne Unterschrift nicht gültig</string>
+    <!-- Hint on CVV fragment title for where to look for CVV code -->
+    <string name="See_back_of_card">Siehe Rückseite der Karte</string>
+    <!-- Hint on CVV fragment title for where to look for CVV code -->
+    <string name="See_font_of_card">Siehe Vorderseite der Karte</string>
+
 
     <!-- Flight booking sharing -->
     <!-- The first line of the share email (casual introduction) -->
@@ -1684,9 +1774,16 @@
     <string name="vip_access_message">Expedia-Elite-Plus-Mitglieder erhalten in VIP-Access-Hotels je nach Verfügbarkeit bei Check-in kostenlose Zimmerupgrades und weitere Extras.</string>
     <!-- Filter for showing only VIP access hotels -->
     <string name="filter_vip_access">Nur VIP-Access-Hotels</string>
+    <!-- ON and OFF text for toggle switches -->
+    <string name="switch_on">AN</string>
+    <string name="switch_off">AUS</string>
 
     <!-- HotelDetailsFragmentActivity and friends -->
+    <!-- Discount percent shown in hotel results list -->
     <string name="minus_x_percent">-%2.0f%%</string>
+    <!-- Discount percent shown in hotel details fragment -->
+    <string name="x_percent_OFF_TEMPLATE">%2.0f%% Rabatt</string>
+    <!-- Recommended string shown in hotel details -->
     <string name="x_percent_guests_recommend">%2.0f%% der Gäste empfehlen dieses Hotel.</string>
 
     <!-- Amenity strings -->
@@ -1908,6 +2005,8 @@
     <string name="confirmation_email">Bestätigungsmail</string>
     <!-- Contact info for a country with a known support line where %s represents the phone number -->
     <string name="contact_phone_template">Wenn Sie Fragen zu Ihrer Buchung haben, erreichen Sie Expedia unter %s.</string>
+    <!-- Travelocity- Contact info for a country with a known support line where %s represents the phone number -->
+    <string name="contact_phone_template_tvly">Wenn Sie Fragen zu Ihrer Buchung haben, erreichen Sie Travelocity unter %s.</string>
 
     <!-- Rate template strings -->
     <!-- Label for the number of guests the booking is for. -->
@@ -1986,6 +2085,8 @@
     <string name="coupon_applied">Gutschein wurde eingelöst</string>
     <!-- Message showing the user how much they saved by applying a coupon.  %s is a money amount, e.g. "You saved $5.00!" -->
     <string name="coupon_saved_TEMPLATE">Sie haben %s gespart!</string>
+    <!-- Message shown when a coupon is being removed -->
+    <string name="coupon_removing_dialog">Gutschein wird entfernt</string>
 
     <!-- Coupon Error Strings -->
     <!-- Generic error when applying coupon, but we didn't get an error code back -->
@@ -2927,5 +3028,11 @@
     <!-- Itinerary card elements -->
     <!-- Content description for action: Press to view share options -->
     <string name="cd_share_menu_btn">Tippen, um Optionen zum Teilen des Reiseplans zu sehen</string>
+
+    <!-- Tablet Search Results Content Descriptions -->
+    <!-- Content description for Hotel Search Results -->
+    <string name="cd_tablet_results_hotel_list">Hotel-Suchergebnisse</string>
+    <!-- Content description for Flight Search Results -->
+    <string name="cd_tablet_results_flight_list">Flug-Suchergebnisse</string>
 
 </resources>
