--- a/project/res/values-fr-rCA/strings.xml
+++ b/project/res/values-fr-rCA/strings.xml
@@ -28,6 +28,8 @@
     <string name="end_date_optional">Date de fin: (optionnelle)</string>
     <!-- End date display, when there is an end date selected.  %s is the date, e.g. "End Date: September 15" -->
     <string name="end_date_TEMPLATE">Date de fin: %s</string>
+    <!-- Fly From Template where %s is the origin e.g. "Fly from Boston,MA" -->
+    <string name="fly_from_TEMPLATE">Prendre un vol à %1$s</string>
 
     <!-- Calendar picker strings -->
     <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
@@ -92,7 +94,7 @@
     </plurals>
     <!-- Destination and date range e.g. "Maui, Aug 5 - Aug 12 -->
     <string name="destination_and_date_range_TEMPLATE">%1$s, %2$s</string>
-    <!-- Trip To -->
+    <!-- Trip bucket title intro, "Trip To" (e.g., "Trip To New York, USA") -->
     <string name="trip_to">Votre voyage à</string>
     <!-- Trip bucket, trip is empty message -->
     <string name="trip_empty">Votre voyage est vide.</string>
@@ -106,6 +108,11 @@
     <string name="actionbar_tablet_results_hotels_title_TEMPLATE">Hôtels à %1$s</string>
     <!-- Label for VIP badge -->
     <string name="VIP">VIP</string>
+    <!-- Loading Hotels and Flights… -->
+    <string name="loading_hotels_and_flights">Chargement des hôtels et des vols…</string>
+    <!-- Flight fare calendar header for a list of dates to fly -->
+    <string name="when_to_fly">Quand voler</string>
+
 
     <!-- Tablet hotel filters -->
     <!-- "Sort By" section header -->
@@ -140,6 +147,16 @@
     <string name="stops">Escales</string>
     <!-- Header for a flight filter, showing a list of flights from different airlines -->
     <string name="airlines">Cies aériennes</string>
+
+    <!-- Pluralization for number of stops (layovers) on a given flight "2 stops" -->
+    <plurals name="x_Stops_TEMPLATE">
+        <item quantity="zero">Direct</item>
+        <item quantity="one">%s escale</item>
+        <item quantity="two">%s escales</item>
+        <item quantity="few">%s escales</item>
+        <item quantity="many">%s escales</item>
+        <item quantity="other">%s escales</item>
+    </plurals>
 
     <!-- Header for a dropdown to select from a list of available departure airports -->
     <string name="departure_airports">Aéroports de départ</string>
@@ -182,6 +199,22 @@
     <!-- Tablet flight trip bucket -->
     <!-- Label describing this flight is a round trip flight. -->
     <string name="round_trip">Aller-retour</string>
+    <!-- Label describing the total price of the flight or hotel that is going to be booked -->
+    <string name="total_with_tax">Prix total taxe incluse</string>
+
+    <!-- Tablet hotel trip bucket -->
+    <!-- Progress dialog text while creating a trip -->
+    <string name="spinner_text_hotel_create_trip">Création du voyage …</string>
+
+    <!-- Tablet Checkout -->
+    <!-- Actionbar Title - "Checkout" -->
+    <string name="Checkout">Sortie</string>
+    <!-- Your Trip -->
+    <string name="your_trip">Votre voyage</string>
+    <!-- now booking template (e.g. "Now Booking Hotel Lancaster") -->
+    <string name="now_booking_TEMPLATE">Nouvelle réservation &lt;b&gt;%1$s&lt;/b&gt;</string>
+    <!-- Template for a string that describes a hotel stay, example: "August 8 - 10 (2 nights)" -->
+    <string name="dates_and_nights_TEMPLATE">%1$s (%2$s)</string>
 
     <!-- Facebook -->
     <!-- Weve found your user account -->
@@ -280,6 +313,8 @@
     <string name="find_itinerary_pound">Chercher l\&apos;itinéraire nº</string>
     <!-- Expedia Itinerary -->
     <string name="expedia_itinerary">Nº d\&apos;itinéraire Expedia</string>
+    <!-- Travelocity Itinerary -->
+    <string name="tvly_itinerary">Nº d\&apos;itinéraire Travelocity</string>
     <!-- Elite plus customer support -->
     <string name="elite_plus_customer_support">Soutien à la clientèle Elite Plus</string>
     <!-- No upcoming trips -->
@@ -723,7 +758,7 @@
     <!-- 1: Hotel name, 2: Formatted length of stay -->
     <string name="share_template_long_hotel_1_greeting">Bonjour,\n\nJe reste au %1$s pendant %2$s.</string>
     <!-- 1: Traveler name 2: Hotel name, 3: Formatted length of stay -->
-    <string name="share_template_long_hotel_1_greeting_reshare">Bonjour,\n\n%1$s va séjourner ici : %2$s, perndant %3$s.</string>
+    <string name="share_template_long_hotel_1_greeting_reshare">Bonjour,\n\n%1$s va séjourner ici : %2$s, pendant %3$s.</string>
     <!-- 1: Check in date, 2: Check out date -->
     <string name="share_template_long_hotel_2_checkin_checkout">Arrivée %1$s\nDépart %2$s</string>
     <!-- 1: Hotel name, 2: Hotel street address -->
@@ -734,6 +769,8 @@
     <string name="share_template_long_hotel_5_more_info">Plus d\&apos;information\n%s</string>
     <!-- App download link -->
     <string name="share_template_long_ad">Réservez hôtels, vols, consultez et partagez vos itinéraires. Téléchargez l\&apos;app mobile gratuite Expedia aujourd\&apos;hui.\n%s</string>
+    <!-- Travelocity App download link -->
+    <string name="share_template_long_ad_tvly">Réservez hôtels, vols, consultez et partagez vos itinéraires. Téléchargez l\&apos;appli mobile gratuite Travelocity aujourd\&apos;hui.\n%s</string>
     <!-- 1: city 2: date string -->
     <string name="share_template_subject_flight">Le %2$s, je pars pour %1$s!</string>
     <!-- 1: travelerName 2: city 3: date string -->
@@ -751,6 +788,24 @@
     <!-- 1: vehicle type -->
     <string name="share_template_short_car_type">J\&apos;ai loué une %1$s</string>
     <string name="share_template_short_car_type_an">J\&apos;ai loué une %1$s</string>
+    <string name="share_template_short_car_type_mini">J\&apos;ai loué une mini</string>
+    <string name="share_template_short_car_type_compact">J\&apos;ai loué une compacte</string>
+    <string name="share_template_short_car_type_midsize">J\&apos;ai loué une intermédiaire</string>
+    <string name="share_template_short_car_type_standard">J\&apos;ai loué une voiture standard</string>
+    <string name="share_template_short_car_type_fullsize">J\&apos;ai loué une grosse voiture</string>
+    <string name="share_template_short_car_type_premium">J\&apos;ai loué une voiture supérieure</string>
+    <string name="share_template_short_car_type_luxury">J\&apos;ai loué une voiture de luxe</string>
+    <string name="share_template_short_car_type_special">J\&apos;ai loué une voiture spéciale</string>
+    <string name="share_template_short_car_type_mini_elite">J\&apos;ai loué une mini élite</string>
+    <string name="share_template_short_car_type_compact_elite">J\&apos;ai loué une élite compacte</string>
+    <string name="share_template_short_car_type_midsize_elite">J\&apos;ai loué une élite intermédiaire</string>
+    <string name="share_template_short_car_type_standard_elite">J\&apos;ai loué une élite standard</string>
+    <string name="share_template_short_car_type_fullsize_elite">J\&apos;ai loué une élite pleine dimension</string>
+    <string name="share_template_short_car_type_premium_elite">J\&apos;ai loué une élite supérieure</string>
+    <string name="share_template_short_car_type_luxury_elite">J\&apos;ai loué une élite luxueuse</string>
+    <string name="share_template_short_car_type_economy">J\&apos;ai loué une voiture économique</string>
+    <string name="share_template_short_car_type_economy_elite">J\&apos;ai loué une voiture élite économique</string>
+    <string name="share_template_short_car_type_oversize">J\&apos;ai loué une très grosse voiture</string>
     <!-- 1: pick up date 2: drop off date -->
     <string name="share_template_short_car_dates">de %1$s – %2$s</string>
     <!-- Start of share email.  %1$s is the car rental vendor name (e.g., "Advantage") -->
@@ -1071,6 +1126,8 @@
     <string name="Amount_to_be_paid_now_TEMPLATE">Montant à payer maintenant %1$s</string>
     <!-- String for non-merchant hotel billing policy e.g.: $102.80 Collected by the hotel -->
     <string name="collected_by_the_hotel_TEMPLATE">À être perçu à l\&apos;hôtel : %1$s</string>
+    <!-- "Finish Booking" button that appears after CVV is entered -->
+    <string name="Finish_Booking">Terminer la réservation</string>
     <!-- Checkout menu item -->
     <string name="menu_checkout">Sortie</string>
     <!-- Our best price gaurentee string -->
@@ -1099,6 +1156,15 @@
     <string name="please_use_the_roman_alphabet">Veuillez utiliser l\&apos;alphabet romain</string>
     <!-- Label to show user when they use unsupported characters in their email -->
     <string name="please_enter_a_valid_email_address">Veuillez entrer une adresse courriel valide</string>
+
+    <!-- Tablet Checkout Activity -->
+    <!-- Travelers -->
+    <string name="travelers">Voyageurs</string>
+    <!-- Payment -->
+    <string name="payment">Paiement</string>
+    <!-- Enter Payment Information -->
+    <string name="enter_payment_information">Entrez les renseignements de paiement</string>
+
 
     <!-- Hotel Traveler Info Options Activity -->
     <!-- Done menu item -->
@@ -1245,6 +1311,15 @@
     <string name="only_if_applicable">Nº de recours (le cas échéant)</string>
     <!-- Saving traveler info spinner dialog -->
     <string name="saving_traveler">Enregistrement de l\&apos;information voyageur dans votre compte…</string>
+    <!-- Traveler information Template. e.g. Traveler 2 Information -->
+    <string name="traveler_information_TEMPLATE">%1$sInformation voyageur</string>
+    <!-- Seating Preference -->
+    <string name="seating_preference">Préférences de siège</string>
+    <!-- Special Assistance -->
+    <string name="special_assistance">Assistance particulière</string>
+    <!-- Add Redress # -->
+    <string name="add_redress_num">Ajouter nº recours</string>
+
 
     <!-- Traveler Info spinner values -->
     <!-- None -->
@@ -1412,6 +1487,12 @@
     <!-- Button label imploring users to pick flights due to unavailability -->
     <string name="pick_new_flights">Sélectionner d\&apos;autres vols</string>
 
+    <!-- Hotel booking dialog errors -->
+    <!-- Error shown to user if their hotel is no longer available (sold out, session expired, whatever) -->
+    <string name="error_hotel_no_longer_available">Nous sommes désolés, votre réservation de chambre est expirée</string>
+    <!-- Button label imploring users to pick a new hotel room due to unavailability -->
+    <string name="pick_new_hotel">Choisir un nouvel hôtel</string>
+
     <!-- Credit card input section -->
     <string name="one">1</string>
     <string name="two">2</string>
@@ -1427,11 +1508,20 @@
 
     <!-- Highlight view stuff -->
     <!-- Asks for a cvv code (credit card code) for a card.  %s is the card name, E.g., "CVV code for Dan's Credit Card" -->
-    <string name="cvv_code_TEMPLATE">Code CVV pour &lt;b&gt;%s&lt;/b&gt;</string>
+    <string name="cvv_code_TEMPLATE">&lt;center&gt;Code CVV pour &lt;b&gt;%s&lt;/b&gt;&lt;/center&gt;</string>
     <!-- Name for a generic card.  %s is the last four digits of the card, e.g. "card ending in 1234" -->
     <string name="card_ending_TEMPLATE">se terminant par %s</string>
     <!-- Title for screen telling you to complete your booking by entering a CVV # -->
     <string name="title_complete_booking">Terminer la réservation</string>
+    <!-- Security label above signature strip on credit card mockup, on CVV screen -->
+    <string name="Authorized_Signature">Signature autorisée</string>
+    <!-- Security label below signature strip on credit card mockup, on CVV screen -->
+    <string name="Not_Valid_Unless_Signed">Non valide sans signature</string>
+    <!-- Hint on CVV fragment title for where to look for CVV code -->
+    <string name="See_back_of_card">Voir le verso de la carte</string>
+    <!-- Hint on CVV fragment title for where to look for CVV code -->
+    <string name="See_font_of_card">Voir le recto de la carte</string>
+
 
     <!-- Flight booking sharing -->
     <!-- The first line of the share email (casual introduction) -->
@@ -1683,9 +1773,16 @@
     <string name="vip_access_message">Les hôtels Accès VIP offrent le surclassement sans frais en catégorie supérieure aux membres Élite Plus, ainsi que de nombreux autres avantages, selon disponibilité à l\&apos;arrivée.</string>
     <!-- Filter for showing only VIP access hotels -->
     <string name="filter_vip_access">Seulement les hôtels Accès VIP</string>
+    <!-- ON and OFF text for toggle switches -->
+    <string name="switch_on">Activé</string>
+    <string name="switch_off">Désactivé</string>
 
     <!-- HotelDetailsFragmentActivity and friends -->
+    <!-- Discount percent shown in hotel results list -->
     <string name="minus_x_percent">-%2.0f%%</string>
+    <!-- Discount percent shown in hotel details fragment -->
+    <string name="x_percent_OFF_TEMPLATE">%2.0f%% DE RABAIS</string>
+    <!-- Recommended string shown in hotel details -->
     <string name="x_percent_guests_recommend">%2.0f%% de clients recommandent cet hôtel</string>
 
     <!-- Amenity strings -->
@@ -1907,6 +2004,8 @@
     <string name="confirmation_email">Courriel de confirmation</string>
     <!-- Contact info for a country with a known support line where %s represents the phone number -->
     <string name="contact_phone_template">Si vous avez des questions au sujet de la réservation, veuillez communiquer avec Expedia au %s.</string>
+    <!-- Travelocity- Contact info for a country with a known support line where %s represents the phone number -->
+    <string name="contact_phone_template_tvly">Si vous avez des questions au sujet de la réservation, veuillez contacter Travelocity au %s</string>
 
     <!-- Rate template strings -->
     <!-- Label for the number of guests the booking is for. -->
@@ -1985,6 +2084,8 @@
     <string name="coupon_applied">Bon de réduction appliqué</string>
     <!-- Message showing the user how much they saved by applying a coupon.  %s is a money amount, e.g. "You saved $5.00!" -->
     <string name="coupon_saved_TEMPLATE">Vous avez épargné %s!</string>
+    <!-- Message shown when a coupon is being removed -->
+    <string name="coupon_removing_dialog">Retrait du bon de réduction</string>
 
     <!-- Coupon Error Strings -->
     <!-- Generic error when applying coupon, but we didn't get an error code back -->
@@ -2926,5 +3027,11 @@
     <!-- Itinerary card elements -->
     <!-- Content description for action: Press to view share options -->
     <string name="cd_share_menu_btn">Appuyez pour voir vos options de partage d\&apos;itinéraire</string>
+
+    <!-- Tablet Search Results Content Descriptions -->
+    <!-- Content description for Hotel Search Results -->
+    <string name="cd_tablet_results_hotel_list">Résultats de la recherche d\&apos;hôtels</string>
+    <!-- Content description for Flight Search Results -->
+    <string name="cd_tablet_results_flight_list">Résultats de la recherche de vols</string>
 
 </resources>
