--- a/project/res/values-in/strings.xml
+++ b/project/res/values-in/strings.xml
@@ -28,6 +28,8 @@
     <string name="end_date_optional">Tanggal Berakhir: (Opsional)</string>
     <!-- End date display, when there is an end date selected.  %s is the date, e.g. "End Date: September 15" -->
     <string name="end_date_TEMPLATE">Tanggal Berakhir: %s</string>
+    <!-- Fly From Template where %s is the origin e.g. "Fly from Boston,MA" -->
+    <string name="fly_from_TEMPLATE">Penerbangan dari %1$s</string>
 
     <!-- Calendar picker strings -->
     <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
@@ -92,7 +94,7 @@
     </plurals>
     <!-- Destination and date range e.g. "Maui, Aug 5 - Aug 12 -->
     <string name="destination_and_date_range_TEMPLATE">%1$s, %2$s</string>
-    <!-- Trip To -->
+    <!-- Trip bucket title intro, "Trip To" (e.g., "Trip To New York, USA") -->
     <string name="trip_to">Perjalanan Ke</string>
     <!-- Trip bucket, trip is empty message -->
     <string name="trip_empty">Perjalanan Anda kosong.</string>
@@ -106,6 +108,11 @@
     <string name="actionbar_tablet_results_hotels_title_TEMPLATE">Hotel di %1$s</string>
     <!-- Label for VIP badge -->
     <string name="VIP">VIP</string>
+    <!-- Loading Hotels and Flights… -->
+    <string name="loading_hotels_and_flights">Memuat Hotel dan Penerbangan…</string>
+    <!-- Flight fare calendar header for a list of dates to fly -->
+    <string name="when_to_fly">Waktu Penerbangan</string>
+
 
     <!-- Tablet hotel filters -->
     <!-- "Sort By" section header -->
@@ -140,6 +147,16 @@
     <string name="stops">Transit</string>
     <!-- Header for a flight filter, showing a list of flights from different airlines -->
     <string name="airlines">Maskapai Penerbangan</string>
+
+    <!-- Pluralization for number of stops (layovers) on a given flight "2 stops" -->
+    <plurals name="x_Stops_TEMPLATE">
+        <item quantity="zero">Tanpa Transit</item>
+        <item quantity="one">%s Transit</item>
+        <item quantity="two">%s Transit</item>
+        <item quantity="few">%s Transit</item>
+        <item quantity="many">%s Transit</item>
+        <item quantity="other">%s Transit</item>
+    </plurals>
 
     <!-- Header for a dropdown to select from a list of available departure airports -->
     <string name="departure_airports">Bandara Keberangkatan</string>
@@ -182,6 +199,22 @@
     <!-- Tablet flight trip bucket -->
     <!-- Label describing this flight is a round trip flight. -->
     <string name="round_trip">Pulang-Pergi</string>
+    <!-- Label describing the total price of the flight or hotel that is going to be booked -->
+    <string name="total_with_tax">Total dengan pajak</string>
+
+    <!-- Tablet hotel trip bucket -->
+    <!-- Progress dialog text while creating a trip -->
+    <string name="spinner_text_hotel_create_trip">Membuat perjalanan …</string>
+
+    <!-- Tablet Checkout -->
+    <!-- Actionbar Title - "Checkout" -->
+    <string name="Checkout">Pembayaran</string>
+    <!-- Your Trip -->
+    <string name="your_trip">Perjalanan Anda</string>
+    <!-- now booking template (e.g. "Now Booking Hotel Lancaster") -->
+    <string name="now_booking_TEMPLATE">Sekarang Memesan &lt;b&gt;%1$s&lt;/b&gt;</string>
+    <!-- Template for a string that describes a hotel stay, example: "August 8 - 10 (2 nights)" -->
+    <string name="dates_and_nights_TEMPLATE">%1$s (%2$s)</string>
 
     <!-- Facebook -->
     <!-- Weve found your user account -->
@@ -280,6 +313,8 @@
     <string name="find_itinerary_pound">Cari No. Rencana Perjalanan</string>
     <!-- Expedia Itinerary -->
     <string name="expedia_itinerary">No. Rencana Perjalanan Expedia</string>
+    <!-- Travelocity Itinerary -->
+    <string name="tvly_itinerary">No. Rencana Perjalanan Travelocity</string>
     <!-- Elite plus customer support -->
     <string name="elite_plus_customer_support">Layanan Pelanggan Elite Plus</string>
     <!-- No upcoming trips -->
@@ -734,6 +769,8 @@
     <string name="share_template_long_hotel_5_more_info">Informasi Selengkapnya\n%s</string>
     <!-- App download link -->
     <string name="share_template_long_ad">Pesan hotel, penerbangan, dan lihat atau bagikan rencana perjalanan Anda. Unduh aplikasi mobile Expedia gratis sekarang juga.\n%s</string>
+    <!-- Travelocity App download link -->
+    <string name="share_template_long_ad_tvly">Pesan hotel, penerbangan, lalu lihat dan bagikan rencana perjalanan Anda. Unduh aplikasi mobile Travelocity gratis sekarang juga.\n%s</string>
     <!-- 1: city 2: date string -->
     <string name="share_template_subject_flight">Saya terbang ke %1$s tanggal %2$s</string>
     <!-- 1: travelerName 2: city 3: date string -->
@@ -751,6 +788,24 @@
     <!-- 1: vehicle type -->
     <string name="share_template_short_car_type">Saya sudah menyewa %1$s</string>
     <string name="share_template_short_car_type_an">Saya sudah menyewa %1$s</string>
+    <string name="share_template_short_car_type_mini">Saya telah menyewa Mobil Mini</string>
+    <string name="share_template_short_car_type_compact">Saya telah menyewa Mobil Ringkas</string>
+    <string name="share_template_short_car_type_midsize">Saya telah menyewa Mobil Ukuran Sedang</string>
+    <string name="share_template_short_car_type_standard">Saya telah menyewa Mobil Standar</string>
+    <string name="share_template_short_car_type_fullsize">Saya telah menyewa Mobil Ukuran Normal</string>
+    <string name="share_template_short_car_type_premium">Saya telah menyewa Mobil Premium</string>
+    <string name="share_template_short_car_type_luxury">Saya telah menyewa Mobil Mewah</string>
+    <string name="share_template_short_car_type_special">Saya telah menyewa Mobil Khusus</string>
+    <string name="share_template_short_car_type_mini_elite">Saya telah menyewa Mobil Elit Mini</string>
+    <string name="share_template_short_car_type_compact_elite">Saya telah menyewa Mobil Elit Ringkas</string>
+    <string name="share_template_short_car_type_midsize_elite">Saya telah menyewa Mobil Elit Ukuran Sedang</string>
+    <string name="share_template_short_car_type_standard_elite">Saya telah menyewa Mobil Elit Standar</string>
+    <string name="share_template_short_car_type_fullsize_elite">Saya telah menyewa Mobil Elit Ukuran Normal</string>
+    <string name="share_template_short_car_type_premium_elite">Saya telah menyewa Mobil Elit Premium</string>
+    <string name="share_template_short_car_type_luxury_elite">Saya telah menyewa Mobil Elit Mewah</string>
+    <string name="share_template_short_car_type_economy">Saya telah menyewa Mobil Ekonomis</string>
+    <string name="share_template_short_car_type_economy_elite">Saya telah menyewa Mobil Elit Ekonomis</string>
+    <string name="share_template_short_car_type_oversize">Saya telah menyewa Mobil Ukuran Besar</string>
     <!-- 1: pick up date 2: drop off date -->
     <string name="share_template_short_car_dates">dari %1$s – %2$s</string>
     <!-- Start of share email.  %1$s is the car rental vendor name (e.g., "Advantage") -->
@@ -1071,6 +1126,8 @@
     <string name="Amount_to_be_paid_now_TEMPLATE">Jumlah harus dibayar sekarang %1$s</string>
     <!-- String for non-merchant hotel billing policy e.g.: $102.80 Collected by the hotel -->
     <string name="collected_by_the_hotel_TEMPLATE">Akan ditagihkan oleh hotel: %1$s</string>
+    <!-- "Finish Booking" button that appears after CVV is entered -->
+    <string name="Finish_Booking">Selesaikan Pemesanan</string>
     <!-- Checkout menu item -->
     <string name="menu_checkout">Pembayaran</string>
     <!-- Our best price gaurentee string -->
@@ -1099,6 +1156,15 @@
     <string name="please_use_the_roman_alphabet">Gunakan abjad Romawi</string>
     <!-- Label to show user when they use unsupported characters in their email -->
     <string name="please_enter_a_valid_email_address">Masukkan alamat email yang valid</string>
+
+    <!-- Tablet Checkout Activity -->
+    <!-- Travelers -->
+    <string name="travelers">Pelancong</string>
+    <!-- Payment -->
+    <string name="payment">Pembayaran</string>
+    <!-- Enter Payment Information -->
+    <string name="enter_payment_information">Masukkan informasi pembayaran</string>
+
 
     <!-- Hotel Traveler Info Options Activity -->
     <!-- Done menu item -->
@@ -1245,6 +1311,15 @@
     <string name="only_if_applicable">No. Redress (jika ada)</string>
     <!-- Saving traveler info spinner dialog -->
     <string name="saving_traveler">Menyimpan informasi pelancong ke akun Anda…</string>
+    <!-- Traveler information Template. e.g. Traveler 2 Information -->
+    <string name="traveler_information_TEMPLATE">Informasi %1$s Pelancong</string>
+    <!-- Seating Preference -->
+    <string name="seating_preference">Preferensi Tempat Duduk</string>
+    <!-- Special Assistance -->
+    <string name="special_assistance">Bantuan Khusus</string>
+    <!-- Add Redress # -->
+    <string name="add_redress_num">Tambahkan nomor Penyesuaian Data</string>
+
 
     <!-- Traveler Info spinner values -->
     <!-- None -->
@@ -1412,6 +1487,12 @@
     <!-- Button label imploring users to pick flights due to unavailability -->
     <string name="pick_new_flights">Pilih Penerbangan Baru</string>
 
+    <!-- Hotel booking dialog errors -->
+    <!-- Error shown to user if their hotel is no longer available (sold out, session expired, whatever) -->
+    <string name="error_hotel_no_longer_available">Maaf, waktu Anda untuk menahan kamar ini telah berakhir</string>
+    <!-- Button label imploring users to pick a new hotel room due to unavailability -->
+    <string name="pick_new_hotel">Pilih Hotel Baru</string>
+
     <!-- Credit card input section -->
     <string name="one">1</string>
     <string name="two">2</string>
@@ -1427,11 +1508,20 @@
 
     <!-- Highlight view stuff -->
     <!-- Asks for a cvv code (credit card code) for a card.  %s is the card name, E.g., "CVV code for Dan's Credit Card" -->
-    <string name="cvv_code_TEMPLATE">Kode CVV untuk &lt;b&gt;%s&lt;/b&gt;</string>
+    <string name="cvv_code_TEMPLATE">&lt;center&gt;Kode CVV untuk &lt;b&gt;%s&lt;/b&gt;&lt;/center&gt;</string>
     <!-- Name for a generic card.  %s is the last four digits of the card, e.g. "card ending in 1234" -->
     <string name="card_ending_TEMPLATE">kartu dengan nomor terakhir %s</string>
     <!-- Title for screen telling you to complete your booking by entering a CVV # -->
     <string name="title_complete_booking">Selesaikan Pemesanan</string>
+    <!-- Security label above signature strip on credit card mockup, on CVV screen -->
+    <string name="Authorized_Signature">Tanda Tangan Resmi</string>
+    <!-- Security label below signature strip on credit card mockup, on CVV screen -->
+    <string name="Not_Valid_Unless_Signed">Tidak Valid Hingga Ditandatangani</string>
+    <!-- Hint on CVV fragment title for where to look for CVV code -->
+    <string name="See_back_of_card">Lihat bagian belakang kartu</string>
+    <!-- Hint on CVV fragment title for where to look for CVV code -->
+    <string name="See_font_of_card">Lihat bagian depan kartu</string>
+
 
     <!-- Flight booking sharing -->
     <!-- The first line of the share email (casual introduction) -->
@@ -1683,9 +1773,16 @@
     <string name="vip_access_message">Di hotel VIP Access, anggota Expedia Elite Plus dapat menerima upgrade kamar gratis dan tambahan lainnya tergantung ketersediaan pada saat check-in.</string>
     <!-- Filter for showing only VIP access hotels -->
     <string name="filter_vip_access">Hanya hotel VIP Access</string>
+    <!-- ON and OFF text for toggle switches -->
+    <string name="switch_on">AKTIF</string>
+    <string name="switch_off">TIDAK AKTIF</string>
 
     <!-- HotelDetailsFragmentActivity and friends -->
+    <!-- Discount percent shown in hotel results list -->
     <string name="minus_x_percent">-%2.0f%%</string>
+    <!-- Discount percent shown in hotel details fragment -->
+    <string name="x_percent_OFF_TEMPLATE">DISKON %2.0f%%</string>
+    <!-- Recommended string shown in hotel details -->
     <string name="x_percent_guests_recommend">%2.0f%% tamu merekomendasikan hotel ini.</string>
 
     <!-- Amenity strings -->
@@ -1907,6 +2004,8 @@
     <string name="confirmation_email">Email Konfirmasi</string>
     <!-- Contact info for a country with a known support line where %s represents the phone number -->
     <string name="contact_phone_template">Jika Anda memiliki pertanyaan tentang reservasi Anda, hubungi Expedia di %s.</string>
+    <!-- Travelocity- Contact info for a country with a known support line where %s represents the phone number -->
+    <string name="contact_phone_template_tvly">Jika Anda memiliki pertanyaan tentang reservasi, hubungi Travelocity di %s.</string>
 
     <!-- Rate template strings -->
     <!-- Label for the number of guests the booking is for. -->
@@ -1985,6 +2084,8 @@
     <string name="coupon_applied">Kupon Sudah Digunakan</string>
     <!-- Message showing the user how much they saved by applying a coupon.  %s is a money amount, e.g. "You saved $5.00!" -->
     <string name="coupon_saved_TEMPLATE">Anda menghemat %s!</string>
+    <!-- Message shown when a coupon is being removed -->
+    <string name="coupon_removing_dialog">Menghapus kupon</string>
 
     <!-- Coupon Error Strings -->
     <!-- Generic error when applying coupon, but we didn't get an error code back -->
@@ -2926,5 +3027,11 @@
     <!-- Itinerary card elements -->
     <!-- Content description for action: Press to view share options -->
     <string name="cd_share_menu_btn">Tekan untuk melihat pilihan untuk berbagi rencana perjalanan</string>
+
+    <!-- Tablet Search Results Content Descriptions -->
+    <!-- Content description for Hotel Search Results -->
+    <string name="cd_tablet_results_hotel_list">Hasil Pencarian Hotel</string>
+    <!-- Content description for Flight Search Results -->
+    <string name="cd_tablet_results_flight_list">Hasil Pencarian Penerbangan</string>
 
 </resources>
