--- a/project/res/values-ja/strings.xml
+++ b/project/res/values-ja/strings.xml
@@ -28,6 +28,8 @@
     <string name="end_date_optional">現地出発日 : (オプション)</string>
     <!-- End date display, when there is an end date selected.  %s is the date, e.g. "End Date: September 15" -->
     <string name="end_date_TEMPLATE">現地出発日 : %s</string>
+    <!-- Fly From Template where %s is the origin e.g. "Fly from Boston,MA" -->
+    <string name="fly_from_TEMPLATE">出発地 %1$s</string>
 
     <!-- Calendar picker strings -->
     <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
@@ -92,7 +94,7 @@
     </plurals>
     <!-- Destination and date range e.g. "Maui, Aug 5 - Aug 12 -->
     <string name="destination_and_date_range_TEMPLATE">%1$s、%2$s</string>
-    <!-- Trip To -->
+    <!-- Trip bucket title intro, "Trip To" (e.g., "Trip To New York, USA") -->
     <string name="trip_to">目的地 :</string>
     <!-- Trip bucket, trip is empty message -->
     <string name="trip_empty">旅行のデータがありません。</string>
@@ -106,6 +108,11 @@
     <string name="actionbar_tablet_results_hotels_title_TEMPLATE">%1$sのホテル</string>
     <!-- Label for VIP badge -->
     <string name="VIP">VIP</string>
+    <!-- Loading Hotels and Flights… -->
+    <string name="loading_hotels_and_flights">ホテルとフライトを読み込み中…</string>
+    <!-- Flight fare calendar header for a list of dates to fly -->
+    <string name="when_to_fly">出発日</string>
+
 
     <!-- Tablet hotel filters -->
     <!-- "Sort By" section header -->
@@ -140,6 +147,16 @@
     <string name="stops">乗継回数</string>
     <!-- Header for a flight filter, showing a list of flights from different airlines -->
     <string name="airlines">航空会社</string>
+
+    <!-- Pluralization for number of stops (layovers) on a given flight "2 stops" -->
+    <plurals name="x_Stops_TEMPLATE">
+        <item quantity="zero">乗継なし</item>
+        <item quantity="one">乗継 %s 回</item>
+        <item quantity="two">乗継 %s 回</item>
+        <item quantity="few">乗継 %s 回</item>
+        <item quantity="many">乗継 %s 回</item>
+        <item quantity="other">乗継 %s 回</item>
+    </plurals>
 
     <!-- Header for a dropdown to select from a list of available departure airports -->
     <string name="departure_airports">出発空港</string>
@@ -182,6 +199,22 @@
     <!-- Tablet flight trip bucket -->
     <!-- Label describing this flight is a round trip flight. -->
     <string name="round_trip">往復</string>
+    <!-- Label describing the total price of the flight or hotel that is going to be booked -->
+    <string name="total_with_tax">税込合計</string>
+
+    <!-- Tablet hotel trip bucket -->
+    <!-- Progress dialog text while creating a trip -->
+    <string name="spinner_text_hotel_create_trip">旅行を作成中…</string>
+
+    <!-- Tablet Checkout -->
+    <!-- Actionbar Title - "Checkout" -->
+    <string name="Checkout">購入手続き</string>
+    <!-- Your Trip -->
+    <string name="your_trip">お客様の旅行</string>
+    <!-- now booking template (e.g. "Now Booking Hotel Lancaster") -->
+    <string name="now_booking_TEMPLATE">&lt;b&gt;%1$s&lt;/b&gt;を予約中</string>
+    <!-- Template for a string that describes a hotel stay, example: "August 8 - 10 (2 nights)" -->
+    <string name="dates_and_nights_TEMPLATE">%1$s (%2$s)</string>
 
     <!-- Facebook -->
     <!-- Weve found your user account -->
@@ -280,6 +313,8 @@
     <string name="find_itinerary_pound">旅程番号を検索する</string>
     <!-- Expedia Itinerary -->
     <string name="expedia_itinerary">エクスペディアの旅程番号</string>
+    <!-- Travelocity Itinerary -->
+    <string name="tvly_itinerary">Travelocity 旅程番号</string>
     <!-- Elite plus customer support -->
     <string name="elite_plus_customer_support">Elite Plus カスタマーサポート</string>
     <!-- No upcoming trips -->
@@ -608,9 +643,9 @@
     <string name="car_category_oversize">オーバーサイズカー</string>
 
     <!-- Car types -->
-    <string name="car_type_two_door">2 ドア自動車</string>
-    <string name="car_type_three_door">3 ドア自動車</string>
-    <string name="car_type_four_door">4 ドア自動車</string>
+    <string name="car_type_two_door">2 ドア 自動車</string>
+    <string name="car_type_three_door">3 ドア 自動車</string>
+    <string name="car_type_four_door">4 ドア 自動車</string>
     <string name="car_type_van">バン</string>
     <string name="car_type_wagon">ワゴン</string>
     <string name="car_type_limousine">リムジン</string>
@@ -734,6 +769,8 @@
     <string name="share_template_long_hotel_5_more_info">詳細\n%s</string>
     <!-- App download link -->
     <string name="share_template_long_ad">ホテルとフライトを予約して、旅程を表示 &amp; シェアできます。無料のエクスペディア モバイル アプリを今すぐダウンロードしてください。\n%s</string>
+    <!-- Travelocity App download link -->
+    <string name="share_template_long_ad_tvly">ホテルとフライトを予約して、旅程を表示 &amp; シェアできます。無料の Travelocity モバイル アプリを今すぐダウンロードしてください。\n%s</string>
     <!-- 1: city 2: date string -->
     <string name="share_template_subject_flight">%2$sに%1$sへ行きます</string>
     <!-- 1: travelerName 2: city 3: date string -->
@@ -751,6 +788,24 @@
     <!-- 1: vehicle type -->
     <string name="share_template_short_car_type">%1$sをレンタルしました</string>
     <string name="share_template_short_car_type_an">%1$sをレンタルしました</string>
+    <string name="share_template_short_car_type_mini">ミニカーをレンタルしました</string>
+    <string name="share_template_short_car_type_compact">コンパクトカーをレンタルしました</string>
+    <string name="share_template_short_car_type_midsize">ミドルサイズカーをレンタルしました</string>
+    <string name="share_template_short_car_type_standard">スタンダードカーをレンタルしました</string>
+    <string name="share_template_short_car_type_fullsize">フルサイズカーをレンタルしました</string>
+    <string name="share_template_short_car_type_premium">プレミアムカーをレンタルしました</string>
+    <string name="share_template_short_car_type_luxury">ラグジュアリーカーをレンタルしました</string>
+    <string name="share_template_short_car_type_special">スペシャルカーをレンタルしました</string>
+    <string name="share_template_short_car_type_mini_elite">ミニ エリートカーをレンタルしました</string>
+    <string name="share_template_short_car_type_compact_elite">コンパクト エリートカーをレンタルしました</string>
+    <string name="share_template_short_car_type_midsize_elite">ミドルサイズ エリートカーをレンタルしました</string>
+    <string name="share_template_short_car_type_standard_elite">スタンダード エリートカーをレンタルしました</string>
+    <string name="share_template_short_car_type_fullsize_elite">フルサイズ エリートカーをレンタルしました</string>
+    <string name="share_template_short_car_type_premium_elite">プレミアム エリートカーをレンタルしました</string>
+    <string name="share_template_short_car_type_luxury_elite">ラグジュアリー エリートカーをレンタルしました</string>
+    <string name="share_template_short_car_type_economy">エコノミーカーをレンタルしました</string>
+    <string name="share_template_short_car_type_economy_elite">エコノミー エリートカーをレンタルしました</string>
+    <string name="share_template_short_car_type_oversize">オーバーサイズカーをレンタルしました</string>
     <!-- 1: pick up date 2: drop off date -->
     <string name="share_template_short_car_dates">(%1$s ～ %2$s)</string>
     <!-- Start of share email.  %1$s is the car rental vendor name (e.g., "Advantage") -->
@@ -1071,6 +1126,8 @@
     <string name="Amount_to_be_paid_now_TEMPLATE">現在支払う金額%1$s</string>
     <!-- String for non-merchant hotel billing policy e.g.: $102.80 Collected by the hotel -->
     <string name="collected_by_the_hotel_TEMPLATE">ホテルで徴収 : %1$s</string>
+    <!-- "Finish Booking" button that appears after CVV is entered -->
+    <string name="Finish_Booking">予約を完了する</string>
     <!-- Checkout menu item -->
     <string name="menu_checkout">購入手続き</string>
     <!-- Our best price gaurentee string -->
@@ -1099,6 +1156,15 @@
     <string name="please_use_the_roman_alphabet">半角英字を使用してください</string>
     <!-- Label to show user when they use unsupported characters in their email -->
     <string name="please_enter_a_valid_email_address">有効なメールアドレスを入力してください</string>
+
+    <!-- Tablet Checkout Activity -->
+    <!-- Travelers -->
+    <string name="travelers">旅行者</string>
+    <!-- Payment -->
+    <string name="payment">お支払い</string>
+    <!-- Enter Payment Information -->
+    <string name="enter_payment_information">お支払い情報を入力</string>
+
 
     <!-- Hotel Traveler Info Options Activity -->
     <!-- Done menu item -->
@@ -1245,6 +1311,15 @@
     <string name="only_if_applicable">リドレスナンバー (該当する場合)</string>
     <!-- Saving traveler info spinner dialog -->
     <string name="saving_traveler">お客様のアカウントに旅行者情報を保存中…</string>
+    <!-- Traveler information Template. e.g. Traveler 2 Information -->
+    <string name="traveler_information_TEMPLATE">旅行者 %1$s の情報</string>
+    <!-- Seating Preference -->
+    <string name="seating_preference">座席希望</string>
+    <!-- Special Assistance -->
+    <string name="special_assistance">スペシャル サポート</string>
+    <!-- Add Redress # -->
+    <string name="add_redress_num">リドレスナンバー追加</string>
+
 
     <!-- Traveler Info spinner values -->
     <!-- None -->
@@ -1412,6 +1487,12 @@
     <!-- Button label imploring users to pick flights due to unavailability -->
     <string name="pick_new_flights">新しいフライトを選択する</string>
 
+    <!-- Hotel booking dialog errors -->
+    <!-- Error shown to user if their hotel is no longer available (sold out, session expired, whatever) -->
+    <string name="error_hotel_no_longer_available">大変申し訳ございません。保留中の客室はすでに満室となっています</string>
+    <!-- Button label imploring users to pick a new hotel room due to unavailability -->
+    <string name="pick_new_hotel">新しいホテルを選択する</string>
+
     <!-- Credit card input section -->
     <string name="one">1</string>
     <string name="two">2</string>
@@ -1427,11 +1508,20 @@
 
     <!-- Highlight view stuff -->
     <!-- Asks for a cvv code (credit card code) for a card.  %s is the card name, E.g., "CVV code for Dan's Credit Card" -->
-    <string name="cvv_code_TEMPLATE">&lt;b&gt;%s&lt;/b&gt;様のセキュリティコード</string>
+    <string name="cvv_code_TEMPLATE">&lt;center&gt;&lt;b&gt;%s様のセキュリティコード&lt;/b&gt;&lt;/center&gt;</string>
     <!-- Name for a generic card.  %s is the last four digits of the card, e.g. "card ending in 1234" -->
     <string name="card_ending_TEMPLATE">末尾が %s のクレジットカード</string>
     <!-- Title for screen telling you to complete your booking by entering a CVV # -->
     <string name="title_complete_booking">予約を完了する</string>
+    <!-- Security label above signature strip on credit card mockup, on CVV screen -->
+    <string name="Authorized_Signature">お客様の署名</string>
+    <!-- Security label below signature strip on credit card mockup, on CVV screen -->
+    <string name="Not_Valid_Unless_Signed">署名されるまで無効です</string>
+    <!-- Hint on CVV fragment title for where to look for CVV code -->
+    <string name="See_back_of_card">クレジットカードの裏面をご参照ください</string>
+    <!-- Hint on CVV fragment title for where to look for CVV code -->
+    <string name="See_font_of_card">クレジットカードの表面をご参照ください</string>
+
 
     <!-- Flight booking sharing -->
     <!-- The first line of the share email (casual introduction) -->
@@ -1683,9 +1773,16 @@
     <string name="vip_access_message">IP Access ホテルでは、Expedia Elite Plus メンバーは、客室無料アップグレードおよびその他の特典をご利用いただけます (チェックイン時の利用状況による)。</string>
     <!-- Filter for showing only VIP access hotels -->
     <string name="filter_vip_access">VIP Access ホテルのみ</string>
+    <!-- ON and OFF text for toggle switches -->
+    <string name="switch_on">オン</string>
+    <string name="switch_off">オフ</string>
 
     <!-- HotelDetailsFragmentActivity and friends -->
+    <!-- Discount percent shown in hotel results list -->
     <string name="minus_x_percent">-%2.0f%%</string>
+    <!-- Discount percent shown in hotel details fragment -->
+    <string name="x_percent_OFF_TEMPLATE">%2.0f%% OFF</string>
+    <!-- Recommended string shown in hotel details -->
     <string name="x_percent_guests_recommend">%2.0f%% の宿泊者がこのホテルをお勧めしています。</string>
 
     <!-- Amenity strings -->
@@ -1907,6 +2004,8 @@
     <string name="confirmation_email">確認メール</string>
     <!-- Contact info for a country with a known support line where %s represents the phone number -->
     <string name="contact_phone_template">ご予約に関するお問い合わせは、エクスペディア (%s) までご連絡ください。</string>
+    <!-- Travelocity- Contact info for a country with a known support line where %s represents the phone number -->
+    <string name="contact_phone_template_tvly">ご予約に関するお問い合わせは、Travelocity (%s) までご連絡ください。</string>
 
     <!-- Rate template strings -->
     <!-- Label for the number of guests the booking is for. -->
@@ -1985,6 +2084,8 @@
     <string name="coupon_applied">クーポンが適用されました</string>
     <!-- Message showing the user how much they saved by applying a coupon.  %s is a money amount, e.g. "You saved $5.00!" -->
     <string name="coupon_saved_TEMPLATE">%s お得です !</string>
+    <!-- Message shown when a coupon is being removed -->
+    <string name="coupon_removing_dialog">クーポンを削除</string>
 
     <!-- Coupon Error Strings -->
     <!-- Generic error when applying coupon, but we didn't get an error code back -->
@@ -2926,5 +3027,11 @@
     <!-- Itinerary card elements -->
     <!-- Content description for action: Press to view share options -->
     <string name="cd_share_menu_btn">タップして旅程のシェアのオプションを表示</string>
+
+    <!-- Tablet Search Results Content Descriptions -->
+    <!-- Content description for Hotel Search Results -->
+    <string name="cd_tablet_results_hotel_list">ホテルの検索結果</string>
+    <!-- Content description for Flight Search Results -->
+    <string name="cd_tablet_results_flight_list">フライトの検索結果</string>
 
 </resources>
