--- a/project/res/values-nl/strings.xml
+++ b/project/res/values-nl/strings.xml
@@ -28,6 +28,8 @@
     <string name="end_date_optional">Einddatum: (optioneel)</string>
     <!-- End date display, when there is an end date selected.  %s is the date, e.g. "End Date: September 15" -->
     <string name="end_date_TEMPLATE">Einddatum: %s</string>
+    <!-- Fly From Template where %s is the origin e.g. "Fly from Boston,MA" -->
+    <string name="fly_from_TEMPLATE">Vlieg vanaf %1$s</string>
 
     <!-- Calendar picker strings -->
     <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
@@ -92,7 +94,7 @@
     </plurals>
     <!-- Destination and date range e.g. "Maui, Aug 5 - Aug 12 -->
     <string name="destination_and_date_range_TEMPLATE">%1$s, %2$s</string>
-    <!-- Trip To -->
+    <!-- Trip bucket title intro, "Trip To" (e.g., "Trip To New York, USA") -->
     <string name="trip_to">Reis naar</string>
     <!-- Trip bucket, trip is empty message -->
     <string name="trip_empty">Je reis is leeg.</string>
@@ -106,6 +108,11 @@
     <string name="actionbar_tablet_results_hotels_title_TEMPLATE">%1$s hotels</string>
     <!-- Label for VIP badge -->
     <string name="VIP">VIP</string>
+    <!-- Loading Hotels and Flights… -->
+    <string name="loading_hotels_and_flights">Hotels en vluchten aan het laden …</string>
+    <!-- Flight fare calendar header for a list of dates to fly -->
+    <string name="when_to_fly">Vluchtdatums</string>
+
 
     <!-- Tablet hotel filters -->
     <!-- "Sort By" section header -->
@@ -140,6 +147,16 @@
     <string name="stops">Tussenstops</string>
     <!-- Header for a flight filter, showing a list of flights from different airlines -->
     <string name="airlines">Airlines</string>
+
+    <!-- Pluralization for number of stops (layovers) on a given flight "2 stops" -->
+    <plurals name="x_Stops_TEMPLATE">
+        <item quantity="zero">Geen tussenstops</item>
+        <item quantity="one">%s tussenstop</item>
+        <item quantity="two">%s tussenstops</item>
+        <item quantity="few">%s tussenstops</item>
+        <item quantity="many">%s tussenstops</item>
+        <item quantity="other">%s tussenstops</item>
+    </plurals>
 
     <!-- Header for a dropdown to select from a list of available departure airports -->
     <string name="departure_airports">Luchthavens van vertrek</string>
@@ -182,6 +199,22 @@
     <!-- Tablet flight trip bucket -->
     <!-- Label describing this flight is a round trip flight. -->
     <string name="round_trip">Retourreis</string>
+    <!-- Label describing the total price of the flight or hotel that is going to be booked -->
+    <string name="total_with_tax">Totaal, incl. belastingen</string>
+
+    <!-- Tablet hotel trip bucket -->
+    <!-- Progress dialog text while creating a trip -->
+    <string name="spinner_text_hotel_create_trip">De reis wordt samengesteld …</string>
+
+    <!-- Tablet Checkout -->
+    <!-- Actionbar Title - "Checkout" -->
+    <string name="Checkout">Betaling</string>
+    <!-- Your Trip -->
+    <string name="your_trip">Jouw reis</string>
+    <!-- now booking template (e.g. "Now Booking Hotel Lancaster") -->
+    <string name="now_booking_TEMPLATE">&lt;b&gt;%1$s&lt;/b&gt; wordt nu geboekt</string>
+    <!-- Template for a string that describes a hotel stay, example: "August 8 - 10 (2 nights)" -->
+    <string name="dates_and_nights_TEMPLATE">%1$s (%2$s)</string>
 
     <!-- Facebook -->
     <!-- Weve found your user account -->
@@ -280,6 +313,8 @@
     <string name="find_itinerary_pound">Reisplannr. zoeken</string>
     <!-- Expedia Itinerary -->
     <string name="expedia_itinerary">Expedia reisplannr.</string>
+    <!-- Travelocity Itinerary -->
+    <string name="tvly_itinerary">Travelocity Reisplannr.</string>
     <!-- Elite plus customer support -->
     <string name="elite_plus_customer_support">Elite Plus klantenservice</string>
     <!-- No upcoming trips -->
@@ -734,6 +769,8 @@
     <string name="share_template_long_hotel_5_more_info">Meer info\n%s</string>
     <!-- App download link -->
     <string name="share_template_long_ad">Boek hotels, vluchten en bekijk &amp; deel je reisplannen. Download vandaag nog de gratis Expedia mobiele app.\n%s</string>
+    <!-- Travelocity App download link -->
+    <string name="share_template_long_ad_tvly">Boek hotels, vluchten en bekijk &amp; deel je reisplannen. Download vandaag nog de gratis mobiele app van Travelocity.\n%s</string>
     <!-- 1: city 2: date string -->
     <string name="share_template_subject_flight">Ik vlieg op %2$s naar %1$s</string>
     <!-- 1: travelerName 2: city 3: date string -->
@@ -751,6 +788,24 @@
     <!-- 1: vehicle type -->
     <string name="share_template_short_car_type">Ik heb een %1$s gehuurd</string>
     <string name="share_template_short_car_type_an">Ik heb een %1$s gehuurd</string>
+    <string name="share_template_short_car_type_mini">Ik heb een Mini auto gehuurd</string>
+    <string name="share_template_short_car_type_compact">Ik heb een Compacte auto gehuurd</string>
+    <string name="share_template_short_car_type_midsize">Ik heb een Middelgrote auto gehuurd</string>
+    <string name="share_template_short_car_type_standard">Ik heb een Standaard auto gehuurd</string>
+    <string name="share_template_short_car_type_fullsize">Ik heb een Grote auto gehuurd</string>
+    <string name="share_template_short_car_type_premium">Ik heb een Premium auto gehuurd</string>
+    <string name="share_template_short_car_type_luxury">Ik heb een Luxe auto gehuurd</string>
+    <string name="share_template_short_car_type_special">Ik heb een Speciale auto gehuurd</string>
+    <string name="share_template_short_car_type_mini_elite">Ik heb een Mini Elite auto gehuurd</string>
+    <string name="share_template_short_car_type_compact_elite">Ik heb een Compact Elite auto gehuurd</string>
+    <string name="share_template_short_car_type_midsize_elite">Ik heb een Middelgrote Elite auto gehuurd</string>
+    <string name="share_template_short_car_type_standard_elite">Ik heb een Satndaard Elite auto gehuurd</string>
+    <string name="share_template_short_car_type_fullsize_elite">Ik heb een Grote Elite auto gehuurd</string>
+    <string name="share_template_short_car_type_premium_elite">Ik heb een Premium Elite auto gehuurd</string>
+    <string name="share_template_short_car_type_luxury_elite">Ik heb een Luxe Elite auto gehuurd</string>
+    <string name="share_template_short_car_type_economy">Ik heb een Economy auto gehuurd</string>
+    <string name="share_template_short_car_type_economy_elite">Ik heb een Economy Elite auto gehuurd</string>
+    <string name="share_template_short_car_type_oversize">Ik heb een Extragrote auto gehuurd</string>
     <!-- 1: pick up date 2: drop off date -->
     <string name="share_template_short_car_dates">van %1$s – %2$s</string>
     <!-- Start of share email.  %1$s is the car rental vendor name (e.g., "Advantage") -->
@@ -1071,6 +1126,8 @@
     <string name="Amount_to_be_paid_now_TEMPLATE">Nu te betalen: %1$s</string>
     <!-- String for non-merchant hotel billing policy e.g.: $102.80 Collected by the hotel -->
     <string name="collected_by_the_hotel_TEMPLATE">Te betalen bij hotelreceptie: %1$s</string>
+    <!-- "Finish Booking" button that appears after CVV is entered -->
+    <string name="Finish_Booking">Boeking voltooien</string>
     <!-- Checkout menu item -->
     <string name="menu_checkout">Betaling</string>
     <!-- Our best price gaurentee string -->
@@ -1099,6 +1156,15 @@
     <string name="please_use_the_roman_alphabet">Gebruik alleen latijnse tekens</string>
     <!-- Label to show user when they use unsupported characters in their email -->
     <string name="please_enter_a_valid_email_address">Voer een geldig e-mailadres in</string>
+
+    <!-- Tablet Checkout Activity -->
+    <!-- Travelers -->
+    <string name="travelers">Reizigers</string>
+    <!-- Payment -->
+    <string name="payment">Betaling</string>
+    <!-- Enter Payment Information -->
+    <string name="enter_payment_information">Voer betalingsgegevens in</string>
+
 
     <!-- Hotel Traveler Info Options Activity -->
     <!-- Done menu item -->
@@ -1245,6 +1311,15 @@
     <string name="only_if_applicable">Redressnummer (indien toepasbaar)</string>
     <!-- Saving traveler info spinner dialog -->
     <string name="saving_traveler">Reizigersinformatie wordt in je account opgeslagen…</string>
+    <!-- Traveler information Template. e.g. Traveler 2 Information -->
+    <string name="traveler_information_TEMPLATE">Reizigers%1$sinformatie</string>
+    <!-- Seating Preference -->
+    <string name="seating_preference">Stoelindeling</string>
+    <!-- Special Assistance -->
+    <string name="special_assistance">Speciale assistentie</string>
+    <!-- Add Redress # -->
+    <string name="add_redress_num">Redressnr. toevoegen</string>
+
 
     <!-- Traveler Info spinner values -->
     <!-- None -->
@@ -1412,6 +1487,12 @@
     <!-- Button label imploring users to pick flights due to unavailability -->
     <string name="pick_new_flights">Kies nieuwe vluchten</string>
 
+    <!-- Hotel booking dialog errors -->
+    <!-- Error shown to user if their hotel is no longer available (sold out, session expired, whatever) -->
+    <string name="error_hotel_no_longer_available">Sorry, maar je reservering voor deze kamer is vervallen</string>
+    <!-- Button label imploring users to pick a new hotel room due to unavailability -->
+    <string name="pick_new_hotel">Kies een nieuw hotel</string>
+
     <!-- Credit card input section -->
     <string name="one">1</string>
     <string name="two">2</string>
@@ -1427,11 +1508,20 @@
 
     <!-- Highlight view stuff -->
     <!-- Asks for a cvv code (credit card code) for a card.  %s is the card name, E.g., "CVV code for Dan's Credit Card" -->
-    <string name="cvv_code_TEMPLATE">CVV-code voor &lt;b&gt;%s&lt;/b&gt;</string>
+    <string name="cvv_code_TEMPLATE">&lt;center&gt;CVV-code voor &lt;b&gt;%s&lt;/b&gt;&lt;/center&gt;</string>
     <!-- Name for a generic card.  %s is the last four digits of the card, e.g. "card ending in 1234" -->
     <string name="card_ending_TEMPLATE">creditcard eindigend op %s</string>
     <!-- Title for screen telling you to complete your booking by entering a CVV # -->
     <string name="title_complete_booking">Voltooi je boeking</string>
+    <!-- Security label above signature strip on credit card mockup, on CVV screen -->
+    <string name="Authorized_Signature">Handtekening kaarthouder</string>
+    <!-- Security label below signature strip on credit card mockup, on CVV screen -->
+    <string name="Not_Valid_Unless_Signed">Niet geldig tenzij getekend</string>
+    <!-- Hint on CVV fragment title for where to look for CVV code -->
+    <string name="See_back_of_card">Zie achterkant kaart</string>
+    <!-- Hint on CVV fragment title for where to look for CVV code -->
+    <string name="See_font_of_card">Zie voorkant kaart</string>
+
 
     <!-- Flight booking sharing -->
     <!-- The first line of the share email (casual introduction) -->
@@ -1683,9 +1773,16 @@
     <string name="vip_access_message">Expedia Elite Plus-leden genieten bij check-in in VIP Access hotels van gratis kamerupgrades en ander extraatjes, indien beschikbaar.</string>
     <!-- Filter for showing only VIP access hotels -->
     <string name="filter_vip_access">Alleen VIP Access hotels</string>
+    <!-- ON and OFF text for toggle switches -->
+    <string name="switch_on">AAN</string>
+    <string name="switch_off">UIT</string>
 
     <!-- HotelDetailsFragmentActivity and friends -->
+    <!-- Discount percent shown in hotel results list -->
     <string name="minus_x_percent">%2.0f%% korting</string>
+    <!-- Discount percent shown in hotel details fragment -->
+    <string name="x_percent_OFF_TEMPLATE">%2.0f%% korting</string>
+    <!-- Recommended string shown in hotel details -->
     <string name="x_percent_guests_recommend">%2.0f%% gasten bevelen dit hotel aan.</string>
 
     <!-- Amenity strings -->
@@ -1907,6 +2004,8 @@
     <string name="confirmation_email">Bevestigingsmail</string>
     <!-- Contact info for a country with a known support line where %s represents the phone number -->
     <string name="contact_phone_template">Als je vragen hebt over je boeking, bel Expedia op %s.</string>
+    <!-- Travelocity- Contact info for a country with a known support line where %s represents the phone number -->
+    <string name="contact_phone_template_tvly">Bel Travelocity op %s als je vragen hebt over je boeking.</string>
 
     <!-- Rate template strings -->
     <!-- Label for the number of guests the booking is for. -->
@@ -1985,6 +2084,8 @@
     <string name="coupon_applied">Coupon toegepast</string>
     <!-- Message showing the user how much they saved by applying a coupon.  %s is a money amount, e.g. "You saved $5.00!" -->
     <string name="coupon_saved_TEMPLATE">Je hebt %s bespaard!</string>
+    <!-- Message shown when a coupon is being removed -->
+    <string name="coupon_removing_dialog">Coupon wordt verwijderd</string>
 
     <!-- Coupon Error Strings -->
     <!-- Generic error when applying coupon, but we didn't get an error code back -->
@@ -2926,5 +3027,11 @@
     <!-- Itinerary card elements -->
     <!-- Content description for action: Press to view share options -->
     <string name="cd_share_menu_btn">Druk om de opties voor het delen van je reisplan te tonen</string>
+
+    <!-- Tablet Search Results Content Descriptions -->
+    <!-- Content description for Hotel Search Results -->
+    <string name="cd_tablet_results_hotel_list">Zoekresultaten hotels</string>
+    <!-- Content description for Flight Search Results -->
+    <string name="cd_tablet_results_flight_list">Zoekresultaten vluchten</string>
 
 </resources>
