--- a/project/res/values-zh/strings.xml
+++ b/project/res/values-zh/strings.xml
@@ -28,6 +28,8 @@
     <string name="end_date_optional">结束日期：（可选）</string>
     <!-- End date display, when there is an end date selected.  %s is the date, e.g. "End Date: September 15" -->
     <string name="end_date_TEMPLATE">结束日期：%s</string>
+    <!-- Fly From Template where %s is the origin e.g. "Fly from Boston,MA" -->
+    <string name="fly_from_TEMPLATE">出发城市：%1$s</string>
 
     <!-- Calendar picker strings -->
     <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
@@ -92,7 +94,7 @@
     </plurals>
     <!-- Destination and date range e.g. "Maui, Aug 5 - Aug 12 -->
     <string name="destination_and_date_range_TEMPLATE">%1$s，%2$s</string>
-    <!-- Trip To -->
+    <!-- Trip bucket title intro, "Trip To" (e.g., "Trip To New York, USA") -->
     <string name="trip_to">旅行 -</string>
     <!-- Trip bucket, trip is empty message -->
     <string name="trip_empty">旅行计划是空的。</string>
@@ -106,6 +108,11 @@
     <string name="actionbar_tablet_results_hotels_title_TEMPLATE">%1$s酒店</string>
     <!-- Label for VIP badge -->
     <string name="VIP">VIP</string>
+    <!-- Loading Hotels and Flights… -->
+    <string name="loading_hotels_and_flights">正在加载酒店和航班…</string>
+    <!-- Flight fare calendar header for a list of dates to fly -->
+    <string name="when_to_fly">出发日期</string>
+
 
     <!-- Tablet hotel filters -->
     <!-- "Sort By" section header -->
@@ -140,6 +147,16 @@
     <string name="stops">经停次数</string>
     <!-- Header for a flight filter, showing a list of flights from different airlines -->
     <string name="airlines">航空公司</string>
+
+    <!-- Pluralization for number of stops (layovers) on a given flight "2 stops" -->
+    <plurals name="x_Stops_TEMPLATE">
+        <item quantity="zero">直达</item>
+        <item quantity="one">%s 次经停</item>
+        <item quantity="two">%s 次经停</item>
+        <item quantity="few">%s 次经停</item>
+        <item quantity="many">%s 次经停</item>
+        <item quantity="other">%s 次经停</item>
+    </plurals>
 
     <!-- Header for a dropdown to select from a list of available departure airports -->
     <string name="departure_airports">出发机场</string>
@@ -182,6 +199,22 @@
     <!-- Tablet flight trip bucket -->
     <!-- Label describing this flight is a round trip flight. -->
     <string name="round_trip">往返</string>
+    <!-- Label describing the total price of the flight or hotel that is going to be booked -->
+    <string name="total_with_tax">总额（含税）</string>
+
+    <!-- Tablet hotel trip bucket -->
+    <!-- Progress dialog text while creating a trip -->
+    <string name="spinner_text_hotel_create_trip">正在创建旅行计划…</string>
+
+    <!-- Tablet Checkout -->
+    <!-- Actionbar Title - "Checkout" -->
+    <string name="Checkout">付款</string>
+    <!-- Your Trip -->
+    <string name="your_trip">您的旅行计划</string>
+    <!-- now booking template (e.g. "Now Booking Hotel Lancaster") -->
+    <string name="now_booking_TEMPLATE">正在预订 &lt;b&gt;%1$s&lt;/b&gt;</string>
+    <!-- Template for a string that describes a hotel stay, example: "August 8 - 10 (2 nights)" -->
+    <string name="dates_and_nights_TEMPLATE">%1$s (%2$s)</string>
 
     <!-- Facebook -->
     <!-- Weve found your user account -->
@@ -280,6 +313,8 @@
     <string name="find_itinerary_pound">查找行程编号</string>
     <!-- Expedia Itinerary -->
     <string name="expedia_itinerary">Expedia 行程编号</string>
+    <!-- Travelocity Itinerary -->
+    <string name="tvly_itinerary">Travelocity 行程编号</string>
     <!-- Elite plus customer support -->
     <string name="elite_plus_customer_support">Elite Plus 客户支持</string>
     <!-- No upcoming trips -->
@@ -608,9 +643,9 @@
     <string name="car_category_oversize">特大型车</string>
 
     <!-- Car types -->
-    <string name="car_type_two_door">两个门 轿车</string>
-    <string name="car_type_three_door">三个门 轿车</string>
-    <string name="car_type_four_door">四个门 轿车</string>
+    <string name="car_type_two_door">两个门轿车</string>
+    <string name="car_type_three_door">三个门轿车</string>
+    <string name="car_type_four_door">四个门轿车</string>
     <string name="car_type_van">箱型车</string>
     <string name="car_type_wagon">旅行车</string>
     <string name="car_type_limousine">豪华轿车</string>
@@ -734,6 +769,8 @@
     <string name="share_template_long_hotel_5_more_info">详细信息\n%s</string>
     <!-- App download link -->
     <string name="share_template_long_ad">预订酒店、航班，查看并分享您的行程。马上下载免费的 Expedia 移动应用。\n%s</string>
+    <!-- Travelocity App download link -->
+    <string name="share_template_long_ad_tvly">预订酒店、航班，查看并分享您的行程。马上下载免费的 Travelocity 移动应用。\n%s</string>
     <!-- 1: city 2: date string -->
     <string name="share_template_subject_flight">我 %2$s飞往%1$s</string>
     <!-- 1: travelerName 2: city 3: date string -->
@@ -751,6 +788,24 @@
     <!-- 1: vehicle type -->
     <string name="share_template_short_car_type">我租了一辆%1$s</string>
     <string name="share_template_short_car_type_an">我租了一辆 %1$s</string>
+    <string name="share_template_short_car_type_mini">我租了一辆迷你车</string>
+    <string name="share_template_short_car_type_compact">我租了一辆小型车</string>
+    <string name="share_template_short_car_type_midsize">我租了一辆中型车</string>
+    <string name="share_template_short_car_type_standard">我租了一辆标准型车</string>
+    <string name="share_template_short_car_type_fullsize">我租了一辆大型车</string>
+    <string name="share_template_short_car_type_premium">我租了一辆高档车</string>
+    <string name="share_template_short_car_type_luxury">我租了一辆豪华车</string>
+    <string name="share_template_short_car_type_special">我租了一辆特种车</string>
+    <string name="share_template_short_car_type_mini_elite">我租了一辆精英版迷你车</string>
+    <string name="share_template_short_car_type_compact_elite">我租了一辆精英版小型车</string>
+    <string name="share_template_short_car_type_midsize_elite">我租了一辆精英版中型车</string>
+    <string name="share_template_short_car_type_standard_elite">我租了一辆精英版标准型车</string>
+    <string name="share_template_short_car_type_fullsize_elite">我租了一辆精英版大型车</string>
+    <string name="share_template_short_car_type_premium_elite">我租了一辆精英版高档车</string>
+    <string name="share_template_short_car_type_luxury_elite">我租了一辆精英版豪华车</string>
+    <string name="share_template_short_car_type_economy">我租了一辆经济型车</string>
+    <string name="share_template_short_car_type_economy_elite">我租了一辆精英版经济型车</string>
+    <string name="share_template_short_car_type_oversize">我租了一辆特大型车</string>
     <!-- 1: pick up date 2: drop off date -->
     <string name="share_template_short_car_dates">使用期限为 %1$s – %2$s</string>
     <!-- Start of share email.  %1$s is the car rental vendor name (e.g., "Advantage") -->
@@ -1071,6 +1126,8 @@
     <string name="Amount_to_be_paid_now_TEMPLATE">现在要支付的金额 %1$s</string>
     <!-- String for non-merchant hotel billing policy e.g.: $102.80 Collected by the hotel -->
     <string name="collected_by_the_hotel_TEMPLATE">需要由酒店收取的费用：%1$s</string>
+    <!-- "Finish Booking" button that appears after CVV is entered -->
+    <string name="Finish_Booking">完成预订</string>
     <!-- Checkout menu item -->
     <string name="menu_checkout">付款</string>
     <!-- Our best price gaurentee string -->
@@ -1099,6 +1156,15 @@
     <string name="please_use_the_roman_alphabet">请使用拉丁字母</string>
     <!-- Label to show user when they use unsupported characters in their email -->
     <string name="please_enter_a_valid_email_address">请输入有效的电子邮件地址。</string>
+
+    <!-- Tablet Checkout Activity -->
+    <!-- Travelers -->
+    <string name="travelers">旅客</string>
+    <!-- Payment -->
+    <string name="payment">付款</string>
+    <!-- Enter Payment Information -->
+    <string name="enter_payment_information">输入付款信息</string>
+
 
     <!-- Hotel Traveler Info Options Activity -->
     <!-- Done menu item -->
@@ -1245,6 +1311,15 @@
     <string name="only_if_applicable">Redress #（如适用）</string>
     <!-- Saving traveler info spinner dialog -->
     <string name="saving_traveler">正在将旅客信息保存到您的帐户…</string>
+    <!-- Traveler information Template. e.g. Traveler 2 Information -->
+    <string name="traveler_information_TEMPLATE">旅客 %1$s 信息</string>
+    <!-- Seating Preference -->
+    <string name="seating_preference">座位喜好</string>
+    <!-- Special Assistance -->
+    <string name="special_assistance">特殊帮助</string>
+    <!-- Add Redress # -->
+    <string name="add_redress_num">添加 Redress #</string>
+
 
     <!-- Traveler Info spinner values -->
     <!-- None -->
@@ -1412,6 +1487,12 @@
     <!-- Button label imploring users to pick flights due to unavailability -->
     <string name="pick_new_flights">选择新的航班</string>
 
+    <!-- Hotel booking dialog errors -->
+    <!-- Error shown to user if their hotel is no longer available (sold out, session expired, whatever) -->
+    <string name="error_hotel_no_longer_available">非常抱歉，这种客房已经订满了</string>
+    <!-- Button label imploring users to pick a new hotel room due to unavailability -->
+    <string name="pick_new_hotel">选择其他酒店</string>
+
     <!-- Credit card input section -->
     <string name="one">1</string>
     <string name="two">2</string>
@@ -1427,11 +1508,20 @@
 
     <!-- Highlight view stuff -->
     <!-- Asks for a cvv code (credit card code) for a card.  %s is the card name, E.g., "CVV code for Dan's Credit Card" -->
-    <string name="cvv_code_TEMPLATE">&lt;b&gt;%s&lt;/b&gt;的 CVV 码</string>
+    <string name="cvv_code_TEMPLATE">&lt;center&gt;&lt;b&gt;%s&lt;/b&gt;的 CVV 码&lt;/center&gt;</string>
     <!-- Name for a generic card.  %s is the last four digits of the card, e.g. "card ending in 1234" -->
     <string name="card_ending_TEMPLATE">以 %s 结尾的信用卡</string>
     <!-- Title for screen telling you to complete your booking by entering a CVV # -->
     <string name="title_complete_booking">完成预订</string>
+    <!-- Security label above signature strip on credit card mockup, on CVV screen -->
+    <string name="Authorized_Signature">授权签名</string>
+    <!-- Security label below signature strip on credit card mockup, on CVV screen -->
+    <string name="Not_Valid_Unless_Signed">无签名无效</string>
+    <!-- Hint on CVV fragment title for where to look for CVV code -->
+    <string name="See_back_of_card">请看信用卡背面</string>
+    <!-- Hint on CVV fragment title for where to look for CVV code -->
+    <string name="See_font_of_card">请看信用卡正面</string>
+
 
     <!-- Flight booking sharing -->
     <!-- The first line of the share email (casual introduction) -->
@@ -1683,9 +1773,16 @@
     <string name="vip_access_message">在 VIP Access 酒店，Expedia Elite Plus 会员可免费享受客房升级及其他尊享礼遇，具体取决于入住时的供应情况。</string>
     <!-- Filter for showing only VIP access hotels -->
     <string name="filter_vip_access">仅限 VIP Access 酒店</string>
+    <!-- ON and OFF text for toggle switches -->
+    <string name="switch_on">打开</string>
+    <string name="switch_off">关闭</string>
 
     <!-- HotelDetailsFragmentActivity and friends -->
+    <!-- Discount percent shown in hotel results list -->
     <string name="minus_x_percent">-%2.0f%%</string>
+    <!-- Discount percent shown in hotel details fragment -->
+    <string name="x_percent_OFF_TEMPLATE">%2.0f%% 折扣</string>
+    <!-- Recommended string shown in hotel details -->
     <string name="x_percent_guests_recommend">%2.0f%% 的住客推荐该酒店。</string>
 
     <!-- Amenity strings -->
@@ -1907,6 +2004,8 @@
     <string name="confirmation_email">确认电子邮件</string>
     <!-- Contact info for a country with a known support line where %s represents the phone number -->
     <string name="contact_phone_template">如果您对预订有任何问题，请致电 %s 与 Expedia 联系。</string>
+    <!-- Travelocity- Contact info for a country with a known support line where %s represents the phone number -->
+    <string name="contact_phone_template_tvly">如果您对预订有任何问题，请致电 %s 与 Travelocity 联系。</string>
 
     <!-- Rate template strings -->
     <!-- Label for the number of guests the booking is for. -->
@@ -1985,6 +2084,8 @@
     <string name="coupon_applied">已兑换优惠券</string>
     <!-- Message showing the user how much they saved by applying a coupon.  %s is a money amount, e.g. "You saved $5.00!" -->
     <string name="coupon_saved_TEMPLATE">您节省了 %s！</string>
+    <!-- Message shown when a coupon is being removed -->
+    <string name="coupon_removing_dialog">正在删除优惠券</string>
 
     <!-- Coupon Error Strings -->
     <!-- Generic error when applying coupon, but we didn't get an error code back -->
@@ -2926,5 +3027,11 @@
     <!-- Itinerary card elements -->
     <!-- Content description for action: Press to view share options -->
     <string name="cd_share_menu_btn">按住屏幕，查看行程分享选项。</string>
+
+    <!-- Tablet Search Results Content Descriptions -->
+    <!-- Content description for Hotel Search Results -->
+    <string name="cd_tablet_results_hotel_list">酒店搜索结果</string>
+    <!-- Content description for Flight Search Results -->
+    <string name="cd_tablet_results_flight_list">航班搜索结果</string>
 
 </resources>
